<resources>
    <string name="app_name">World Wonders Manager</string>
    <string name="name_hint">Country (ex: France)</string>
    <string name="name_sub">Wonder Country Name</string>
    <string name="address_hint">Destination (ex: Eiffel Tower)</string>
    <string name="address_sub">Wonder Destination</string>
    <string name="google_maps">Open in Google Maps</string>
    <string name="img_select">Select a new avatar</string>
</resources>